# dbt-devcontainer

./: .gitignore  Dockerfile  Makefile  README.md  exports.sh  pyproject.toml
.devcontainer/: devcontainer.json
dbt_example/: Makefile  dbt_project.yml  packages.yml  profiles.yml
dbt_example/models/anomaly_detection_example/: schema.yml  table_that_fluctuates_num_rows.sql
docs/: how-to-add-elementary-cli.md  how-to-add-elementary-dbt-package-to-dbt-project.md  how-to-run-dbt-in-container.md
